--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="" id="productos-container"></div>
+    <div class="card" id="productos-container"></div>
     <script src="index.js"></script>
   </body>
 </html>
